--- a/index.html
+++ b/index.html
@@ -169,26 +169,31 @@ document.addEventListener("DOMContentLoaded", () => {
   <hr>
   <table id=i>
     <tr>
+      <td id=wub>
       <td id=rwb>
       <td id=wu>
       <td id=wb>
       <td id=w>
     <tr>
+      <td id=ubr>
       <td id=gur>
       <td id=ub>
       <td id=ur>
       <td id=u>
     <tr>
+      <td id=brg>
       <td id=wbg>
       <td id=br>
       <td id=bg>
       <td id=b>
     <tr>
+      <td id=rgw>
       <td id=urw>
       <td id=rg>
       <td id=rw>
       <td id=r>
     <tr>
+      <td id=gwu>
       <td id=bgu>
       <td id=gw>
       <td id=gu>
@@ -196,6 +201,7 @@ document.addEventListener("DOMContentLoaded", () => {
     <tr>
       <td id=wubrg>
       <td id=c>
+      <td>
       <td>
       <td><input type=button value=Reset id=reset>
   </table>
